home page desktop version is already finished

--- a/home.html
+++ b/home.html
@@ -290,7 +290,249 @@
   </div>
 </section>
 
+<section class="app container-css">
+  <div class="app__box">
+    <div class="app__left">
+      <h2 class="app__title">
+        Скачайте наше приложения для вашего удобство
+      </h2>
+      <p class="app__text">
+        Незнаете где скачать вот и вам ссылка!
+      </p>
+      <div class="app__link-box">
+        <a href="#" class="app__link app__play-market">
+          <span>GET IT ON</span>Google Play
+        </a>
+        <a href="#" class="app__link app__app-store">
+          <span>Available on the</span>App Store
+        </a>
+      </div>
+    </div>
+    <div class="app__right">
+      <img class="app__img" src="img/img-bg-home-phone.png" alt="img of links">
+    </div>
+  </div>
+</section>
+
 </main>
+
+<footer class="footer">
+  <div class="footer__top">
+    <div class="footer__container container-css">
+      <div class="footer__box">
+        <div class="footer__list-box">
+          <h3 class="footer__title">Модельный ряд</h3>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="#" class="footer__link">Chevrolet Tracker</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Chevrolet Traverse</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Chevrolet Tahoe</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Chevrolet Trailblazer</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Chevrolet Equinox</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Chevrolet Malibu</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Chevrolet Lacetii</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Chevrolet Cobalt</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Chevrolet Nexia</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Chevrolet Spark</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Chevrolet Labo</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Chevrolet Damas</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__list-box">
+          <h3 class="footer__title">О Chevrolet</h3>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="#" class="footer__link">Дилерская сеть</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Стать дилером</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Подписаться на новости</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Часто задаваемые вопросы</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Свяжитесь с нами</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__list-box">
+          <h3 class="footer__title">Покупательям</h3>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="#" class="footer__link">Конфигуратор</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Поиск дилера</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Выбрать в наличии</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Запрос цены</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Запись на тест-драйв</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Специальные предложения</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Chevrolet Finance</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Chevrolet Insurance</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Корпоративные продажи</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Скачать брошюру</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__list-box">
+          <h3 class="footer__title">Владельцам</h3>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="#" class="footer__link">Запись на сервис онлайн</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Запасные части</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Предложения для владельцев</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Руководства по эксплуатации</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Гарантия</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Помощь на дорогах</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Сервисные кампании</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Отзывные кампании</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="accardion__box d-none">
+        <div id="accordion">
+          <div class="card">
+            <div class="card-header" id="headingOne">
+              <h5 class="mb-0">
+                <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  Collapsible Group Item #1
+                </button>
+              </h5>
+            </div>
+
+            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+              <div class="card-body">
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header" id="headingTwo">
+              <h5 class="mb-0">
+                <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Collapsible Group Item #2
+                </button>
+              </h5>
+            </div>
+            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+              <div class="card-body">
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header" id="headingThree">
+              <h5 class="mb-0">
+                <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Collapsible Group Item #3
+                </button>
+              </h5>
+            </div>
+            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+              <div class="card-body">
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer-link__box">
+        <h3 class="footer-link__title">СТАНЕМ ДРУЗЬЯМИ</h3>
+        <div class="footer-web__link-box">
+          <a href="#" class="footer-web__link">
+            <span>
+            <svg width="12" height="24" viewBox="0 0 12 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M8.18555 24V13.2H11.4644L12 8.4H8.18555V6.06211C8.18555 4.82611 8.21713 3.6 9.94427 3.6H11.6936V0.168164C11.6936 0.116564 10.191 0 8.67081 0C5.49599 0 3.50808 1.98863 3.50808 5.64023V8.4H0V13.2H3.50808V24H8.18555Z" fill="black"/>
+              </svg>
+            </span>
+          </a>
+          <a href="#" class="footer-web__link">
+            <span>
+              <svg width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M6.27273 2.09091C3.96317 2.09091 2.09091 3.96317 2.09091 6.27273V16.7273C2.09091 19.0368 3.96317 20.9091 6.27273 20.9091H16.7273C19.0368 20.9091 20.9091 19.0368 20.9091 16.7273V6.27273C20.9091 3.96317 19.0368 2.09091 16.7273 2.09091H6.27273ZM0 6.27273C0 2.8084 2.8084 0 6.27273 0H16.7273C20.1916 0 23 2.8084 23 6.27273V16.7273C23 20.1916 20.1916 23 16.7273 23H6.27273C2.8084 23 0 20.1916 0 16.7273V6.27273Z" fill="black"/>
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M12.0057 8.35213C11.3531 8.25537 10.6867 8.36683 10.1011 8.67066C9.51556 8.9745 9.04072 9.45523 8.74413 10.0445C8.44754 10.6338 8.3443 11.3015 8.44911 11.9528C8.55391 12.6042 8.86142 13.2058 9.32789 13.6723C9.79437 14.1388 10.396 14.4463 11.0474 14.5511C11.6987 14.6559 12.3665 14.5527 12.9557 14.2561C13.545 13.9595 14.0257 13.4846 14.3295 12.8991C14.6334 12.3135 14.7448 11.6471 14.6481 10.9945C14.5494 10.3289 14.2392 9.71265 13.7634 9.23683C13.2876 8.76101 12.6713 8.45084 12.0057 8.35213ZM9.13811 6.81472C10.114 6.30833 11.2248 6.12256 12.3124 6.28384C13.4218 6.44835 14.4488 6.9653 15.2419 7.75833C16.0349 8.55137 16.5519 9.57843 16.7164 10.6878C16.8776 11.7754 16.6919 12.8862 16.1855 13.8621C15.6791 14.838 14.8779 15.6294 13.8958 16.1238C12.9137 16.6181 11.8007 16.7901 10.7152 16.6155C9.62966 16.4408 8.62685 15.9283 7.8494 15.1508C7.07194 14.3734 6.55943 13.3706 6.38475 12.285C6.21008 11.1995 6.38214 10.0865 6.87646 9.10444C7.37077 8.12234 8.16218 7.32112 9.13811 6.81472Z" fill="black"/>
+                </svg>
+            </span>
+          </a>
+          <a href="#" class="footer-web__link">
+            <span>
+              <svg width="26" height="23" viewBox="0 0 26 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M6.16754 12.8561L9.39493 20.9404L13.5971 16.7298L20.7844 22.4541L26 0L0 10.455L6.16754 12.8561ZM4.13966 10.4321L16.5327 5.4486L6.67734 11.4201L4.13966 10.4321ZM18.7411 5.89102L10.5155 13.4309L9.52605 17.1668L7.69614 12.5832L18.7411 5.89102ZM11.1314 17.0456L11.6299 15.1632L12.399 15.7756L11.1314 17.0456ZM19.8483 19.7624L12.3638 13.8016L23.6323 3.4724L19.8483 19.7624Z" fill="black"/>
+                </svg>
+            </span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer__bottom">
+    <div class="footer__container container-css">
+      <span>Copyright 2022</span>
+      <p class="footer__bottom-title">
+        FIND NEW ROADS <span>TM</span>
+      </p>
+    </div>
+  </div>
+</footer>
 
   <script src="js/info.js"></script>
   <script src="js/main.js"></script>
